--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: 1.15rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.display {
+  position: relative;
+  padding-top: 4vh;
+  height: 100%;
+  background-color: papayawhip;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.display::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  content: "";
+  background-image: url("../public/img/background-img.jpg");
+  min-height: 100%;
+  min-width: 100%;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  filter: blur(2px) grayscale(50%) opacity(0.5);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.stack {
+  position: relative;
+}
+
+#active {
+  border-radius: 5px;
+  border: 2px solid tomato;
+  background: tomato;
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  padding: 15px;
+  font-size: 16px;
+  cursor: pointer;
+  margin: 5px;
 }
